--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto&subset=cyrillic" rel="stylesheet"></link>
 </head>
 
 <body>
@@ -13,7 +14,6 @@
             <label>Купить молока</label>
             <time>22.10.2019</time>
             <button>Готово!</button>
-            <button>Good</button>
         </form>
     </div>
 </body>
