--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <label>Купить молока</label>
             <time>22.10.2019</time>
             <button>Готово!</button>
+            <button>Готово!</button>
         </form>
     </div>
 </body>
